# group-10-robot-

./: CLAUDE.md  CMakeLists.txt  README.md  frames_2025-11-24_14.23.42.gv  frames_2025-11-26_12.50.54.gv  frames_2025-11-26_13.12.00.gv  frames_2025-12-01_12.53.47.gv  frames_2025-12-02_16.03.21.gv  frames_2025-12-02_16.13.25.gv  frames_2025-12-02_16.31.29.gv  frames_2025-12-05_16.14.39.gv  frames_2025-12-05_16.27.14.gv  frames_2025-12-05_16.42.25.gv  r2d10_bridge.yaml
.github/: copilot-instructions.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cmd_vel_bridge/lib/cmd_vel_bridge/: cmd_vel_bridge
install/cmd_vel_bridge/share/cmd_vel_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/r2d10/lib/r2d10/: odom_to_tf.py
install/r2d10/share/r2d10/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/r2d10/share/r2d10/cmake/: r2d10Config-version.cmake  r2d10Config.cmake
install/r2d10/share/r2d10/environment/: ament_prefix_path.dsv  (+1 more)
launch/: world.launch.py
log/: latest_build
meshes/: left_wheel_1.stl  ultrasonic_left_1.stl
src/cmd_vel_bridge/: package.xml  setup.py  setup.py.save
src/r2d10/: CMakeLists.txt  r2d10_bridge.yaml
src/r2d10/launch/: worldlaunch2.py
src/r2d10/meshes/: base_link.stl
src/r2d10/scripts/: odom_to_tf.py
src/r2d10/urdf/: assembly_3.urdf  assembly_3.urdf.xacro
src/r2d10/worlds/: church.sdf
src/r2d10/worlds/models/cricket ball/: model.sdf
worlds/: church.sdf
(+79 files in other folders)
